--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -1,5 +1,6 @@
 .home-page {
     margin: auto;
+    width: 100%;
 }
 
 .mainContent {
